                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.3.0

  *) [TS-1436] Added Yahoo directory layout for installation

  *) [TS-1414] gzip plugin enhancements

  *) [TS-1427] PluginVCs now use a method similar to actual socket VCs
   for firing inactivity timeout events

  *) [TS-1426] protection from NULL deref when using 
   TSHttpTxnOutgoingTransparencySet after a user agent has disconnected

  *) [TS-1425] clean up the lingering read before deallocating its buffers
   when an origin server terminates the connection during a POST request

  *) [TS-1249] Disable ESI packed nodes by default.
   Author: Shu Kit Chan <chanshukit@gmail.com>

  *) [TS-1421] Modify the default log configs to avoid logging to stdout
   or stderr. This helps with TS-306 (but is not a solution for lack of
   log rotation on traffic.out).

  *) [TS-1415] return 400 if the length of request hostname is zero.

  *) [TS-1379] Better error message when mgmt socket is not available.

  *) [TS-1389] Replace TSHttpTxnServerRespNoStore() with
   TSHttpTxnServerRespNoStoreSet(), and move it to ts/ts.h. Author: Phil
   Sorber.

  *) Removed the (experiemental) TSHttpTxnClientDataGet() API. See
   TS-998 for more details.

  *) [TS-1408] Plugin to implement the stale-while-revalidate and
    stale-if-error features of RFC5861
    Author: Phil Sorber <phil@omniti.com>

  *) [TS-1406] add ESI to experimental plugins build

  *) [TS-1387] Allow proxy.config.http.insert_age_in_response to be overridden
    Author: Phil Sorber

  *) [TS-1392] Fix SNI certificate fallback path

  *) [TS-1385] generic atomic operations API

  *) [TS-1380] SSL wildcard lookup doesn't find the longest match

  *) [TS-1315] Fix URL parsing to handle non-HTTP schemes correctly.

  *) [TS-1322] CONNECT to parent proxy has URL with a trailing slash
    Author: Yakov Kopel

  *) [TS-1370] Restore original stale-wile-revalidate code for posterity